--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="assets/vendor/font-awesome/css/solid.min.css">
     <link rel="stylesheet" href="assets/vendor/font-awesome/css/regular.min.css">
 
+
     <!-- Main Css Files -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -258,31 +259,274 @@
             <div class="swiper-container">
                 <div class="swiper blogSwiper">
                     <div class="swiper-wrapper">
+                        <!-- First -->
                         <div class="swiper-slide ">
                             <div class="blog-card">
-                             
+                                <div class="card-head">
+                                    <img class="img-fluid" src="assets/img/blog/img-1.png">
+                                </div>
+                                <div class="card-body">
+                                    <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                                    <div class="card-body-detail">
+                                        <span class="date">
+                                            <i class="fa-regular fa-calendar-minus"></i>
+                                            <h6>23 Eylül 2022</h6>
+                                        </span>
+                                        <a href="#">Detay <i class="fa-solid fa-arrow-right-long"></i></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        <!-- Second -->
+                        <div class="swiper-slide ">
+                            <div class="blog-card">
+                                <div class="card-head">
+                                    <img class="img-fluid" src="assets/img/blog/img-2.png">
+                                </div>
+                                <div class="card-body">
+                                    <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                                    <div class="card-body-detail">
+                                        <span class="date">
+                                            <i class="fa-regular fa-calendar-minus"></i>
+                                            <h6>23 Eylül 2022</h6>
+                                        </span>
+                                        <a href="#">Detay <i class="fa-solid fa-arrow-right-long"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Third -->
+                        <div class="swiper-slide ">
+                            <div class="blog-card">
+                                <div class="card-head">
+                                    <img class="img-fluid" src="assets/img/blog/img-2.png">
+                                </div>
+                                <div class="card-body">
+                                    <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                                    <div class="card-body-detail">
+                                        <span class="date">
+                                            <i class="fa-regular fa-calendar-minus"></i>
+                                            <h6>23 Eylül 2022</h6>
+                                        </span>
+                                        <a href="#">Detay <i class="fa-solid fa-arrow-right-long"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div class="blog-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
                 <div class="blog-btn-next"><i class="fa-solid fa-angle-right"></i></div>
             </div>
+            <div class="mt-5 text-center">
+                <a class="all-btn" href="#">tüm yazıları gör <i class="fa-solid fa-angle-right"></i></a>
+            </div>
         </div>
     </section>
     <!-- Blod Side END -->
 
-    <!-- =========== Skills  Side =========== -->
-    <!-- Skills Side END -->
+    <!-- =========== blog-detay  Side =========== -->
+    <section id="blogDetail">
+        <div class="container">
+            <div class="swiper-container">
+                <div class="swiper blogDetailSwiper">
+                    <div class="swiper-wrapper">
+                        <!-- First -->
+                        <div class="swiper-slide ">
+                            <div class="row gy-5">
+                                <div class="col-lg-6">
+                                    <div class="card-container">
+                                        <h4>UX tüm iyi psikologlarla önemli bir özellik paylaşıyor: empati.</h4>
+                                        <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı
+                                            süreçten
+                                            başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve kişisel
+                                            bilgi
+                                            birikimini aktardığı değerli bir eser, gerçek yaşam hikayesidir. Barbaros
+                                            Yarkın’ın öyküsü hepimize ilham verirken…</p>
+                                        <div class="buttons">
+                                            <a class="active" href="">Devamını Oku</a>
+                                            <a href="">Teklif Al</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <img src="assets/img/blog-detail-img-1.png" class="img-fluid">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Second -->
+                        <div class="swiper-slide ">
+                            <div class="row gy-5">
+                                <div class="col-lg-6">
+                                    <div class="card-container">
+                                        <h4>UX tüm iyi psikologlarla önemli bir özellik paylaşıyor: empati.</h4>
+                                        <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı
+                                            süreçten
+                                            başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve kişisel
+                                            bilgi
+                                            birikimini aktardığı değerli bir eser, gerçek yaşam hikayesidir. Barbaros
+                                            Yarkın’ın öyküsü hepimize ilham verirken…</p>
+                                        <div class="buttons">
+                                            <a class="active" href="">Devamını Oku</a>
+                                            <a href="">Teklif Al</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <img src="assets/img/blog-detail-img-1.png" class="img-fluid">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Third -->
 
-    <!-- =========== Services  Side =========== -->
-    <!-- Services Side END -->
 
-    <!-- =========== call option  Side =========== -->
-    <!-- call option Side END -->
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="blog-Detail-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
+                <div class="blog-Detail-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+            </div>
 
-    <!-- =========== portfolio Side =========== -->
-    <!-- portfolio Side END -->
+        </div>
+    </section>
+    <!-- blog detay Side END -->
+
+    <!-- =========== Faq Side =========== -->
+    <section id="faq">
+        <div class="container">
+            <h3>Sıkça Sorulan Sorular</h3>
+
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            How am I going to use Guest Service?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Only download it here and scan the QR code of your hotel.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading2">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
+                            Is Guest Service Free?
+                        </button>
+                    </h2>
+                    <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Only download it here and scan the QR code of your hotel.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading3">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
+                            Is Guest Service available in every hotel?
+                        </button>
+                    </h2>
+                    <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Only download it here and scan the QR code of your hotel.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading4">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse4" aria-expanded="true" aria-controls="collapse4">
+                            Does the hotel I stay use Guest Service?
+                        </button>
+                    </h2>
+                    <div id="collapse4" class="accordion-collapse collapse " aria-labelledby="heading4"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Only download it here and scan the QR code of your hotel.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading5">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse5" aria-expanded="true" aria-controls="collapse5">
+                            I have any other questions?
+                        </button>
+                    </h2>
+                    <div id="collapse5" class="accordion-collapse collapse " aria-labelledby="heading5"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Only download it here and scan the QR code of your hotel.
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    <!-- Faq Side END -->
+
+    <!-- =========== biziSecenler  Side =========== -->
+    <section id="biziSecenler">
+        <div class="container">
+            <h1>:)</h1>
+            <h3>Bizi Seçen <br>
+                Mutlu Müşteriler</h3>
+            <div class="d-flex flex-wrap justify-content-center imgs-container">
+                <img src="assets/img/bizi-secenler/5.png">
+                <img src="assets/img/bizi-secenler/5.png">
+                <img src="assets/img/bizi-secenler/5.png">
+                <img src="assets/img/bizi-secenler/5.png">
+                <img src="assets/img/bizi-secenler/5.png">
+                <img src="assets/img/bizi-secenler/5.png">
+                <img src="assets/img/bizi-secenler/5.png">
+                <img src="assets/img/bizi-secenler/5.png">
+                <img src="assets/img/bizi-secenler/5.png">
+            </div>
+        </div>
+    </section>
+    <!-- BiziSecenler END -->
+
+    <!-- =========== Teklif al Side =========== -->
+    <section id="teklif">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <img src="assets/img/teklif-al.png" alt="teklif al">
+                </div>
+                <div class="col-lg-6">
+                    <h3>hemen teklif alın</h3>
+                    <p>Size özel en uygun website teklifini <br class="d-none d-lg-block">
+                        ihtiyaçlarınıza göre hazırlayalım.</p>
+                    <form>
+                        <input type="text" placeholder="İsim ve Soyisminiz">
+                        <input type="text" placeholder="Telefonunuz">
+                        <input type="text" placeholder="Eposta Adresiniz">
+                        <select >
+                            <option>Almak İstediğiniz Hizmeti Seçiniz</option>
+                            <option>test</option>
+                        </select>
+                        <textarea rows="6" placeholder="Belirtmek İstedikleriniz"></textarea>
+                        <a class="teklif-btn" href="#">Teklifinizi Gönderin <img src="assets/img/left.png"></a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Teklif al Side END -->
 
     <!-- =========== Team Side =========== -->
     <!-- Team Side END -->
