--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="assets/vendor/font-awesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="assets/vendor/font-awesome/css/solid.min.css">
     <link rel="stylesheet" href="assets/vendor/font-awesome/css/regular.min.css">
-
+    <link rel="stylesheet" href="assets/vendor/font-awesome/css/brands.min.css">
 
     <!-- Main Css Files -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -504,7 +504,7 @@
     <section id="teklif">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 align-items-center d-flex">
                     <img src="assets/img/teklif-al.png" alt="teklif al">
                 </div>
                 <div class="col-lg-6">
@@ -515,7 +515,7 @@
                         <input type="text" placeholder="İsim ve Soyisminiz">
                         <input type="text" placeholder="Telefonunuz">
                         <input type="text" placeholder="Eposta Adresiniz">
-                        <select >
+                        <select>
                             <option>Almak İstediğiniz Hizmeti Seçiniz</option>
                             <option>test</option>
                         </select>
@@ -528,22 +528,61 @@
     </section>
     <!-- Teklif al Side END -->
 
-    <!-- =========== Team Side =========== -->
-    <!-- Team Side END -->
-
-    <!-- =========== Pricing Side =========== -->
-    <!-- Pricing Side END -->
-
-    <!-- =========== Faq two Side =========== -->
-    <!-- Faq Two Side END -->
-
-    <!-- =========== Contct Side =========== -->
-    <!-- Contact Side END -->
-
-    <!-- =========== newsletter Side =========== -->
-    <!-- newsletter Side END -->
-
     <!-- =========== Footer Side =========== -->
+    <footer id="footer">
+        <div class="container">
+            <div class="row gy-5 justify-content-between justify-content-lg-start">
+                <div class="col-lg-7 col-md-4 text-center text-md-start">
+                    <img src="assets/img/logo.png">
+                    <h5>Yoldaki Dijital dünyaya <br class="d-none d-lg-block">
+                        açılan ortağınız</h5>
+                    <h5 class="mail">info@realwebtasarim.com</h5>
+                    <div class="social-medias justify-content-center justify-content-md-start">
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 text-center text-lg-start">
+                    <h5 class="link-title">Şirket</h5>
+                    <ol class="d-flex flex-column">
+                        <li>
+                            <a href=""> Hakkımzıda</a>
+                        </li>
+                        <li>
+                            <a href=""> Neler Yapıyoruz?</a>
+                        </li>
+                        <li>
+                            <a href=""> Teklif Al</a>
+                        </li>
+                        <li>
+                            <a href=""> İletişim</a>
+                        </li>
+                    </ol>
+                </div>
+                <div class="col-lg-2 col-sm-4 text-center text-lg-start">
+                    <h5 class="link-title">Kurumsal</h5>
+                    <ol class="d-flex flex-column">
+                        <li>
+                            <a href=""> Blog</a>
+                        </li>
+                        <li>
+                            <a href=""> Referanslar</a>
+                        </li>
+                        <li>
+                            <a href=""> Hizmetlerimiz</a>
+                        </li>
+                        <li>
+                            <a href=""> Destek</a>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+        <div class="author">
+            <p>© 2022 Tüm Hakları Saklıdır</p>
+        </div>
+    </footer>
     <!-- Footer Side END -->
 
 
