--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     <!-- =========== Teklif al Side =========== -->
     <section id="teklif">
         <div class="container">
-            <div class="row">
+            <div class="row gy-5">
                 <div class="col-lg-6 align-items-center d-flex">
                     <img src="assets/img/teklif-al.png" alt="teklif al">
                 </div>
