--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-6">
                                 <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
                                 <div style="width: 60%;">
                                     <h3>''Dijital dünyaya açılan iş ortağınız''</h3>
                                     <a href="#">hemen teklif alın</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-6">
                                 <img class="img-fluid" src="assets/img/hero-img-1.png">
                             </div>
                         </div>
