--- a/index.html
+++ b/index.html
@@ -62,43 +62,43 @@
             <div class="swiper heroSwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="row">
-                            <div class="col-lg-6">
+                        <div class="row gy-sm-0 gy-5 text-center text-md-start">
+                            <div class="col-sm-6 order-1 order-md-0">
                                 <h1>PROFESYONEL WEB Tasarım Ajansı</h1>
-                                <div style="width: 60%;">
+                                <div class="w-60">
                                     <h3>''Dijital dünyaya açılan iş ortağınız''</h3>
                                     <a href="#">hemen teklif alın</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-sm-6 order-0 order-md-1">
                                 <img class="img-fluid" src="assets/img/hero-img-1.png">
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="row">
-                            <div class="col-6">
-                                <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
-                                <div style="width: 60%;">
+                        <div class="row gy-sm-0 gy-5 text-center text-md-start">
+                            <div class="col-sm-6 order-1 order-md-0">
+                                <h1>um asperiores facilis doloremque adipisci placeat ex debitis!</h1>
+                                <div class="w-60">
                                     <h3>''Dijital dünyaya açılan iş ortağınız''</h3>
                                     <a href="#">hemen teklif alın</a>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-sm-6 order-0 order-md-1">
                                 <img class="img-fluid" src="assets/img/hero-img-1.png">
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <h1>Lorem ipsum dolor sit amet.</h1>
-                                <div style="width: 60%;">
+                        <div class="row gy-sm-0 gy-5 text-center text-md-start">
+                            <div class="col-sm-6 order-1 order-md-0">
+                                <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga, nesciunt!</h1>
+                                <div class="w-60">
                                     <h3>''Dijital dünyaya açılan iş ortağınız''</h3>
                                     <a href="#">hemen teklif alın</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-sm-6 order-0 order-md-1">
                                 <img class="img-fluid" src="assets/img/hero-img-1.png">
                             </div>
                         </div>
@@ -115,7 +115,7 @@
     <section id="whatWeDo">
         <div class="container">
             <h3>neler yapıyoruz?</h3>
-            <ol id="myTab" role="tablist" class="d-flex justify-content-between">
+            <ol id="myTab" role="tablist" class="d-flex justify-content-lg-between justify-content-center flex-wrap flex-lg-nowrap">
                 <li filter="all">Tümü</li>
                 <li filter="website" class="active">Website</li>
                 <li filter="logo">Logo</li>
@@ -129,15 +129,15 @@
                 <div class="swiper whatWeDoSwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide atest all">
-                            <div class="row">
-                                <div class="col-lg-6 img-body">
+                            <div class="row gy-5 gy-lg-0">
+                                <div class="col-6 img-body">
                                     <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1.png" class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 img-body">
+                                <div class="col-6 img-body">
                                     <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1-2.png" class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
@@ -149,14 +149,14 @@
 
                         <div class="swiper-slide atest all">
                             <div class="row">
-                                <div class="col-lg-6 img-body">
+                                <div class="col-6 img-body">
                                     <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1.png" class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 img-body">
+                                <div class="col-6 img-body">
                                     <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1-2.png" class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
@@ -167,8 +167,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="what-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
-                <div class="what-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+                <div class="d-flex justify-content-center mt-md-0 mt-4">
+                    <div class="what-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
+                    <div class="what-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+                </div>
             </div>
 
 
@@ -245,8 +247,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="what-else-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
-                <div class="what-else-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+                <div class="d-flex justify-content-center">
+                    <div class="what-else-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
+                    <div class="what-else-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+                </div>
             </div>
         </div>
     </section>
@@ -316,10 +320,12 @@
 
                     </div>
                 </div>
-                <div class="blog-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
-                <div class="blog-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+                <div class="d-flex justify-content-center">
+                    <div class="blog-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
+                    <div class="blog-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+                </div>
             </div>
-            <div class="mt-5 text-center">
+            <div class="mt-sm-5 mt-3 text-center">
                 <a class="all-btn" href="#">tüm yazıları gör <i class="fa-solid fa-angle-right"></i></a>
             </div>
         </div>
@@ -338,12 +344,8 @@
                                 <div class="col-lg-6">
                                     <div class="card-container">
                                         <h4>UX tüm iyi psikologlarla önemli bir özellik paylaşıyor: empati.</h4>
-                                        <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı
-                                            süreçten
-                                            başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve kişisel
-                                            bilgi
-                                            birikimini aktardığı değerli bir eser, gerçek yaşam hikayesidir. Barbaros
-                                            Yarkın’ın öyküsü hepimize ilham verirken…</p>
+                                        <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı süreçten başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve kişisel bilgi birikimini aktardığı değerli bir eser, gerçek yaşam
+                                            hikayesidir. Barbaros Yarkın’ın öyküsü hepimize ilham verirken…</p>
                                         <div class="buttons">
                                             <a class="active" href="">Devamını Oku</a>
                                             <a href="">Teklif Al</a>
@@ -361,12 +363,8 @@
                                 <div class="col-lg-6">
                                     <div class="card-container">
                                         <h4>UX tüm iyi psikologlarla önemli bir özellik paylaşıyor: empati.</h4>
-                                        <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı
-                                            süreçten
-                                            başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve kişisel
-                                            bilgi
-                                            birikimini aktardığı değerli bir eser, gerçek yaşam hikayesidir. Barbaros
-                                            Yarkın’ın öyküsü hepimize ilham verirken…</p>
+                                        <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı süreçten başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve kişisel bilgi birikimini aktardığı değerli bir eser, gerçek yaşam
+                                            hikayesidir. Barbaros Yarkın’ın öyküsü hepimize ilham verirken…</p>
                                         <div class="buttons">
                                             <a class="active" href="">Devamını Oku</a>
                                             <a href="">Teklif Al</a>
@@ -400,13 +398,11 @@
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             How am I going to use Guest Service?
                         </button>
                     </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne"
-                        data-bs-parent="#accordionExample">
+                    <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             Only download it here and scan the QR code of your hotel.
                         </div>
@@ -415,13 +411,11 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading2">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
                             Is Guest Service Free?
                         </button>
                     </h2>
-                    <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
-                        data-bs-parent="#accordionExample">
+                    <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             Only download it here and scan the QR code of your hotel.
                         </div>
@@ -430,13 +424,11 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading3">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
                             Is Guest Service available in every hotel?
                         </button>
                     </h2>
-                    <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
-                        data-bs-parent="#accordionExample">
+                    <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             Only download it here and scan the QR code of your hotel.
                         </div>
@@ -445,13 +437,11 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading4">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapse4" aria-expanded="true" aria-controls="collapse4">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="true" aria-controls="collapse4">
                             Does the hotel I stay use Guest Service?
                         </button>
                     </h2>
-                    <div id="collapse4" class="accordion-collapse collapse " aria-labelledby="heading4"
-                        data-bs-parent="#accordionExample">
+                    <div id="collapse4" class="accordion-collapse collapse " aria-labelledby="heading4" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             Only download it here and scan the QR code of your hotel.
                         </div>
@@ -460,13 +450,11 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading5">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapse5" aria-expanded="true" aria-controls="collapse5">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="true" aria-controls="collapse5">
                             I have any other questions?
                         </button>
                     </h2>
-                    <div id="collapse5" class="accordion-collapse collapse " aria-labelledby="heading5"
-                        data-bs-parent="#accordionExample">
+                    <div id="collapse5" class="accordion-collapse collapse " aria-labelledby="heading5" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             Only download it here and scan the QR code of your hotel.
                         </div>
@@ -483,8 +471,7 @@
     <section id="biziSecenler">
         <div class="container">
             <h1>:)</h1>
-            <h3>Bizi Seçen <br>
-                Mutlu Müşteriler</h3>
+            <h3>Bizi Seçen <br> Mutlu Müşteriler</h3>
             <div class="d-flex flex-wrap justify-content-center imgs-container">
                 <img src="assets/img/bizi-secenler/5.png">
                 <img src="assets/img/bizi-secenler/5.png">
@@ -509,8 +496,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h3>hemen teklif alın</h3>
-                    <p>Size özel en uygun website teklifini <br class="d-none d-lg-block">
-                        ihtiyaçlarınıza göre hazırlayalım.</p>
+                    <p>Size özel en uygun website teklifini <br class="d-none d-lg-block"> ihtiyaçlarınıza göre hazırlayalım.</p>
                     <form>
                         <input type="text" placeholder="İsim ve Soyisminiz">
                         <input type="text" placeholder="Telefonunuz">
@@ -534,8 +520,7 @@
             <div class="row gy-5 justify-content-between justify-content-lg-start">
                 <div class="col-lg-7 col-md-4 text-center text-md-start">
                     <img src="assets/img/logo.png">
-                    <h5>Yoldaki Dijital dünyaya <br class="d-none d-lg-block">
-                        açılan ortağınız</h5>
+                    <h5>Yoldaki Dijital dünyaya <br class="d-none d-lg-block"> açılan ortağınız</h5>
                     <h5 class="mail">info@realwebtasarim.com</h5>
                     <div class="social-medias justify-content-center justify-content-md-start">
                         <a href=""><i class="fa-brands fa-instagram"></i></a>
