--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         <!-- First -->
                         <div class="swiper-slide ">
                             <div class="row gy-5">
-                                <div class="col-lg-6">
+                                <div class="col-lg-6 order-1 order-lg-0">
                                     <div class="card-container">
                                         <h4>UX tüm iyi psikologlarla önemli bir özellik paylaşıyor: empati.</h4>
                                         <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı süreçten başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve kişisel bilgi birikimini aktardığı değerli bir eser, gerçek yaşam
@@ -352,7 +352,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-lg-6 order-0 order-lg-1">
                                     <img src="assets/img/blog-detail-img-1.png" class="img-fluid">
                                 </div>
                             </div>
@@ -360,7 +360,7 @@
                         <!-- Second -->
                         <div class="swiper-slide ">
                             <div class="row gy-5">
-                                <div class="col-lg-6">
+                                <div class="col-lg-6 order-1 order-lg-0">
                                     <div class="card-container">
                                         <h4>UX tüm iyi psikologlarla önemli bir özellik paylaşıyor: empati.</h4>
                                         <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı süreçten başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve kişisel bilgi birikimini aktardığı değerli bir eser, gerçek yaşam
@@ -371,7 +371,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-lg-6 order-0 order-lg-1">
                                     <img src="assets/img/blog-detail-img-1.png" class="img-fluid">
                                 </div>
                             </div>
@@ -382,8 +382,10 @@
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
-                <div class="blog-Detail-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
-                <div class="blog-Detail-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+                <div class="d-flex justify-content-center">
+                    <div class="blog-Detail-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
+                    <div class="blog-Detail-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+                </div>
             </div>
 
         </div>
@@ -491,10 +493,10 @@
     <section id="teklif">
         <div class="container">
             <div class="row gy-5">
-                <div class="col-lg-6 align-items-center d-flex">
-                    <img src="assets/img/teklif-al.png" alt="teklif al">
+                <div class="col-lg-6 d-none d-lg-flex align-items-center">
+                    <img class="form-img" src="assets/img/teklif-al.png" alt="teklif al">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-12 text-center text-lg-start">
                     <h3>hemen teklif alın</h3>
                     <p>Size özel en uygun website teklifini <br class="d-none d-lg-block"> ihtiyaçlarınıza göre hazırlayalım.</p>
                     <form>
