--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             <div class="what-card">
                                 <img src="assets/img/whatElseWeDoSlides/img-1.png" class="img-fluid">
                                 <h4>
-                                    web <br> yazılım
+                                    web <br class="d-none d-sm-block"> yazılım
                                 </h4>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                             <div class="what-card">
                                 <img src="assets/img/whatElseWeDoSlides/img-2.png" class="img-fluid">
                                 <h4>
-                                    Kurulsal <br> Seo
+                                    Kurulsal <br class="d-none d-sm-block"> Seo
                                 </h4>
                             </div>
                         </div>
@@ -474,7 +474,35 @@
         <div class="container">
             <h1>:)</h1>
             <h3>Bizi Seçen <br> Mutlu Müşteriler</h3>
-            <div class="d-flex flex-wrap justify-content-center imgs-container">
+            <div class="swiper biziSecenlerSwiper d-lg-none d-block">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="assets/img/bizi-secenler/5.png">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/img/bizi-secenler/5.png">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/img/bizi-secenler/5.png">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/img/bizi-secenler/5.png">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/img/bizi-secenler/5.png">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/img/bizi-secenler/5.png">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/img/bizi-secenler/5.png">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/img/bizi-secenler/5.png">
+                    </div>
+                </div>
+            </div>
+            <div class="d-lg-flex d-none flex-wrap justify-content-center imgs-container">
                 <img src="assets/img/bizi-secenler/5.png">
                 <img src="assets/img/bizi-secenler/5.png">
                 <img src="assets/img/bizi-secenler/5.png">
