--- a/index.html
+++ b/index.html
@@ -32,26 +32,29 @@
 
     <!-- =========== Header Side =========== -->
     <header id="header">
-        <div class="p-0 container d-flex align-items-center">
-            <div class="logo">
+        <div class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+            <div class="logo order-0 ">
                 <img src="assets/img/logo.png" alt="gerçek web tasarım">
             </div>
-            <nav class="nav">
-                <ol class="navbar">
-                    <li><a class="active" href="">anasayfa</a></li>
-                    <li><a href="">hakkımızda</a></li>
-                    <li><a href="">Hizmetlerimiz</a></li>
-                    <li><a href="">Referanslar</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">İletişim</a></li>
-                </ol>
-            </nav>
+            <div class="d-block d-lg-flex align-items-center navbar-container order-3">
+                <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
+                    <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
+                        <li><a class="active" href="">anasayfa</a></li>
+                        <li><a href="">hakkımızda</a></li>
+                        <li><a href="">Hizmetlerimiz</a></li>
+                        <li><a href="">Referanslar</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">İletişim</a></li>
+                    </ol>
+                </nav>
 
-            <div class="d-flex ms-auto align-items-center search">
-                <i class='bx bx-search'></i>
-                <input type="text" placeholder="ARA">
+                <div class="d-none d-lg-flex ms-auto align-items-center search">
+                    <i class='bx bx-search'></i>
+                    <input type="text" placeholder="ARA">
+                </div>
             </div>
-        </div>
+            <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
+            <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
 
     </header>
     <!-- Header Side END -->
