--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="swiper-slide">
                         <div class="row gy-sm-0 gy-5 text-center text-md-start">
                             <div class="col-sm-6 order-1 order-md-0">
-                                <h1>um asperiores facilis doloremque adipisci placeat ex debitis!</h1>
+                                <h1>PROFESYONEL WEB Tasarım Ajansı2</h1>
                                 <div class="w-60">
                                     <h3>''Dijital dünyaya açılan iş ortağınız''</h3>
                                     <a href="#">hemen teklif alın</a>
@@ -95,7 +95,7 @@
                     <div class="swiper-slide">
                         <div class="row gy-sm-0 gy-5 text-center text-md-start">
                             <div class="col-sm-6 order-1 order-md-0">
-                                <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga, nesciunt!</h1>
+                                <h1>PROFESYONEL WEB Tasarım Ajansı3</h1>
                                 <div class="w-60">
                                     <h3>''Dijital dünyaya açılan iş ortağınız''</h3>
                                     <a href="#">hemen teklif alın</a>
