--- a/index.html
+++ b/index.html
@@ -36,12 +36,25 @@
             <div class="logo order-0 ">
                 <img src="assets/img/logo.png" alt="gerçek web tasarım">
             </div>
-            <div class="d-block d-lg-flex align-items-center navbar-container order-3">
+            <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
                 <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
                         <li><a class="active" href="">anasayfa</a></li>
                         <li><a href="">hakkımızda</a></li>
-                        <li><a href="">Hizmetlerimiz</a></li>
+                        <li class="dropdown">
+                            <a href="JavaScript:Void(0)">Hizmetlerimiz</a>
+                            <ul class="dropdown-content">
+                                <li><a href="">Web Tasarım</a></li>
+                                <li><a href="">Web Yazılım</a></li>
+                                <li><a href="">Kurumsal SEO</a></li>
+                                <li><a href="">E-Ticaret</a></li>
+                                <li><a href="">Reklam Yönetimi</a></li>
+                                <li><a href="">Sosyal Medya</a></li>
+                                <li><a href="">Kurumsal Kimlik</a></li>
+                                <li><a href="">Logo</a></li>
+
+                            </ul>
+                        </li>
                         <li><a href="">Referanslar</a></li>
                         <li><a href="">Blog</a></li>
                         <li><a href="">İletişim</a></li>
@@ -383,7 +396,7 @@
 
 
                     </div>
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination d-flex justify-content-lg-start justify-content-center"></div>
                 </div>
                 <div class="d-flex justify-content-center">
                     <div class="blog-Detail-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
