--- a/blog-detail.html
+++ b/blog-detail.html
@@ -31,46 +31,46 @@
 <body>
 
     <!-- =========== Header Side =========== -->
-    <header id="header">
-        <div
-            class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
-            <div class="logo order-0 ">
-                <img src="assets/img/logo.png" alt="gerçek web tasarım">
-            </div>
-            <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
-                <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
-                    <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-                        <li><a class="active" href="">anasayfa</a></li>
-                        <li><a href="">hakkımızda</a></li>
-                        <li class="dropdown">
-                            <a href="JavaScript:Void(0)">Hizmetlerimiz</a>
-                            <ul class="dropdown-content">
-                                <li><a href="">Web Tasarım</a></li>
-                                <li><a href="">Web Yazılım</a></li>
-                                <li><a href="">Kurumsal SEO</a></li>
-                                <li><a href="">E-Ticaret</a></li>
-                                <li><a href="">Reklam Yönetimi</a></li>
-                                <li><a href="">Sosyal Medya</a></li>
-                                <li><a href="">Kurumsal Kimlik</a></li>
-                                <li><a href="">Logo</a></li>
+  <header id="header">
+  <div
+    class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+    <div class="logo order-0 ">
+     <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
+    </div>
+    <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
+      <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
+        <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
+          <li><a class="active" href="index.html">anasayfa</a></li>
+          <li><a href="about-us.html">hakkımızda</a></li>
+          <li class="dropdown">
+            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+            <ul class="dropdown-content">
+              <li><a href="services.html">Hizmetler</a></li>
+              <li><a href="services-detail.html">Hizmet Detay</a></li>
+              <li><a href="references.html">Referanslar</a></li>
+              <li><a href="references-detail.html">Referenslar Detay</a></li>
+              <li><a href="index.html">Anasayfa</a></li>
+              <li><a href="contact.html">İletişim</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="blog-detail.html">Blog Detay</a></li>
 
-                            </ul>
-                        </li>
-                        <li><a href="">Referanslar</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">İletişim</a></li>
-                    </ol>
-                </nav>
+            </ul>
+          </li>
+          <li><a href="references.html">Referanslar</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">İletişim</a></li>
+        </ol>
+      </nav>
 
-                <div class="d-none d-lg-flex ms-auto align-items-center search">
-                    <i class='bx bx-search'></i>
-                    <input type="text" placeholder="ARA">
-                </div>
-            </div>
-            <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-            <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
+      <div class="d-none d-lg-flex ms-auto align-items-center search">
+        <i class='bx bx-search'></i>
+        <input type="text" placeholder="ARA">
+      </div>
+    </div>
+    <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
+    <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
 
-    </header>
+</header>
     <!-- Header Side END -->
 
     <!-- Blog Content detail START -->
